--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 @import "tailwindcss";
-root {
+#root {
   @apply flex flex-col min-h-screen;
 }
 header {
   @apply flex px-4 md:px-6 py-6 bg-blue-500 text-white items-center;
 }
 body {
-  @apply bg-gray-100 antialiased text-center ;
+  @apply bg-gray-100 antialiased;
 }
 main {
   @apply flex flex-col flex-1 justify-center place-items-center;
 }
 footer {
-  @apply flex px-4 md:px-6 py-3 bg-slate-500 text-white  text-center items-center;
-}
+  @apply flex px-4 md:px-6 py-3 bg-slate-500 text-white items-center;
+}x
